Add error in responses
