# docs/swagger.json
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "Login successful",
                         "schema": {
-                            "$ref": "#/definitions/swagger.TokenResponse"
+                            "$ref": "#/definitions/swagger.LoginResponse"
                         }
                     },
                     "400": {
@@ -88,7 +88,7 @@
                     "200": {
                         "description": "Tokens refreshed",
                         "schema": {
-                            "$ref": "#/definitions/swagger.TokenResponse"
+                            "$ref": "#/definitions/swagger.RefreshResponse"
                         }
                     },
                     "400": {
@@ -385,7 +385,7 @@
                     "200": {
                         "description": "Successfully create",
                         "schema": {
-                            "$ref": "#/definitions/swagger.SuccessTodoResponse"
+                            "$ref": "#/definitions/swagger.GetTodoResponse"
                         }
                     },
                     "400": {
@@ -499,6 +499,10 @@
                 "data": {
                     "$ref": "#/definitions/swagger.createResponse"
                 },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "message": {
                     "type": "string",
                     "example": "Successfully create"
@@ -512,9 +516,33 @@
                     "type": "integer",
                     "example": 400
                 },
+                "error": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "message": {
                     "type": "string",
                     "example": "Invalid request data"
+                }
+            }
+        },
+        "swagger.GetTodoResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/swagger.TodoResponse"
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Successfully fetch"
                 }
             }
         },
@@ -548,13 +576,17 @@
                         "$ref": "#/definitions/swagger.TodoResponse"
                     }
                 },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "limit": {
                     "type": "integer",
                     "example": 20
                 },
                 "message": {
                     "type": "string",
-                    "example": "Ok"
+                    "example": "Successfully fetch"
                 },
                 "offset": {
                     "type": "integer",
@@ -563,6 +595,26 @@
                 "total": {
                     "type": "integer",
                     "example": 1
+                }
+            }
+        },
+        "swagger.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/swagger.tokenResponse"
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Login successful"
                 }
             }
         },
@@ -587,12 +639,36 @@
                 }
             }
         },
+        "swagger.RefreshResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/swagger.tokenResponse"
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Tokens refreshed"
+                }
+            }
+        },
         "swagger.ServerErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer",
                     "example": 500
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": true
                 },
                 "message": {
                     "type": "string",
@@ -606,6 +682,10 @@
                 "code": {
                     "type": "integer",
                     "example": 200
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": false
                 },
                 "message": {
                     "type": "string",
@@ -623,25 +703,13 @@
                 "data": {
                     "$ref": "#/definitions/swagger.UserData"
                 },
+                "error": {
+                    "type": "boolean",
+                    "example": false
+                },
                 "message": {
                     "type": "string",
                     "example": "User successfully created"
-                }
-            }
-        },
-        "swagger.SuccessTodoResponse": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 200
-                },
-                "data": {
-                    "$ref": "#/definitions/swagger.TodoResponse"
-                },
-                "message": {
-                    "type": "string",
-                    "example": "Successfully create"
                 }
             }
         },
@@ -703,25 +771,16 @@
                 }
             }
         },
-        "swagger.TokenResponse": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDI5NzU2MjgsImlkIjoiMTE3YzA4Y2EtZWEzNS00MWEyLWI4MDYtM2M5MmRjNTliMzhlIn0.cJ7xWY_V5dkIxrHfcPub--kUWZP4i2ky1nZDGkPL_BI"
-                },
-                "refresh_token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDM1NzIxMzcsImlkIjoiODE4YmRmNGMtMGI5NC00ZGNiLTk2YmUtMTJhMzFmMDczYWMyIn0.5WCp11fVMXRKMzCzQvltEAC9sN_16u3AtUrMH7Z5JwI"
-                }
-            }
-        },
         "swagger.UnauthorizedResponse": {
             "type": "object",
             "properties": {
                 "code": {
                     "type": "integer",
                     "example": 401
+                },
+                "error": {
+                    "type": "boolean",
+                    "example": true
                 },
                 "message": {
                     "type": "string",
@@ -757,6 +816,19 @@
                 "id": {
                     "type": "integer",
                     "example": 12
+                }
+            }
+        },
+        "swagger.tokenResponse": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDI5NzU2MjgsImlkIjoiMTE3YzA4Y2EtZWEzNS00MWEyLWI4MDYtM2M5MmRjNTliMzhlIn0.cJ7xWY_V5dkIxrHfcPub--kUWZP4i2ky1nZDGkPL_BI"
+                },
+                "refresh_token": {
+                    "type": "string",
+                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE3NDM1NzIxMzcsImlkIjoiODE4YmRmNGMtMGI5NC00ZGNiLTk2YmUtMTJhMzFmMDczYWMyIn0.5WCp11fVMXRKMzCzQvltEAC9sN_16u3AtUrMH7Z5JwI"
                 }
             }
         }
